name:                pkgdbgc
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Lennart Spitzner
maintainer:          hexagoxel@hexagoxel.de
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable pkgdbgc
  main-is:             Main.hs
  other-modules:       Utils
                       Tasks
                       DbParser
                       RootRegistry
                       Paths_pkgdbgc
  other-extensions:    CPP
  build-depends:       base >=4.10 && <4.11
                     , Cabal >= 2
                     , ghc-paths
                     , directory
                     , filepath
                     , ghc
                     , butcher
                     , transformers
                     , containers
                     , pretty
                     , fgl
                     , cabal-plan >= 0.2.0.0
                     , aeson
                     , yaml
                     , text
                     , process
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: {
    CPP

    FlexibleContexts
    FlexibleInstances
    ScopedTypeVariables
    MonadComprehensions
    LambdaCase
    MultiWayIf
    KindSignatures
  }
  ghc-options: {
    -Wall
    -fno-warn-unused-imports
    -fno-warn-redundant-constraints
    -threaded
  }
